[tool.poetry]
name = "pysmile"
version = "0.1.0"
description = ""
authors = ["Viet Le <vietlq85@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pysmile", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^11.3.0"
numpy = "^2.3.2"
typer = "^0.16.1"

[tool.poetry.scripts]
pysmile = "pysmile.cli:main"

[tool.poetry.group.dev.dependencies]
pyfire = "^0.3.4"
black = "^25.1.0"
ruff = "^0.12.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
